# lazyslide-tutorials

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build_notebooks.yaml
scripts/: setup_env.py
tutorials/: cell-segmentation.ipynb  feature_extraction.ipynb  genomics_integration.ipynb  intro_wsi.ipynb  multiple_slides.ipynb  preprocessing.ipynb  zero-shot-learning.ipynb
tutorials/skip/: multiple_slides.ipynb
