[project]
name = "lazyslide-tutorials"
version = "0.1.0"
description = "Tutorials for lazyslide in jupyter notebooks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.7.3",
    "conch",
    "dask-cuda>=24.12.0",
    "dask-jobqueue>=0.9.0",
    "environs>=14.2.0",
    "gseapy>=1.1.9",
    "igraph>=0.11.9",
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.7",
    "jupyter-cache>=1.0.1",
    "jupytext>=1.17.2",
    "lazyslide",
    "marsilea>=0.5.3",
    "mpl-fontkit>=0.5.1",
    "nbconvert>=7.16.6",
    "protobuf>=6.31.1",
    "sacremoses>=0.1.1",
    "scanpy>=1.11.3",
    "seaborn>=0.13.2",
    "transformers==4.52.3",
]

[tool.uv.sources]
wsidata = { git = "https://github.com/rendeirolab/wsidata", branch = "main" }
lazyslide = { git = "https://github.com/rendeirolab/lazyslide", branch = "main" }
conch = { git = "https://github.com/mahmoodlab/CONCH.git" }

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
